--- a/Gooze/Views/GZEBlurViewController.xib
+++ b/Gooze/Views/GZEBlurViewController.xib
@@ -1,16 +1,17 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GZEBlurViewController" customModule="Gooze" customModuleProvider="target">
             <connections>
+                <outlet property="applyButton" destination="vT1-0c-cyx" id="kBG-n7-oRE"/>
                 <outlet property="blurEffectView" destination="O0R-RU-MoO" id="JA1-I3-Jgc"/>
                 <outlet property="bottomLeftHButton" destination="Xci-6j-XcK" id="b1r-Yf-wG7"/>
                 <outlet property="bottomLeftVButton" destination="3pN-Pn-Pwh" id="ICF-GO-9GA"/>
@@ -29,10 +30,10 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eLk-xI-0g9">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eLk-xI-0g9">
                     <rect key="frame" x="0.0" y="20" width="375" height="603"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NmT-nx-4Cs">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NmT-nx-4Cs">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                             <gestureRecognizers/>
                         </imageView>
@@ -51,7 +52,7 @@
                                             <constraint firstAttribute="width" constant="3" id="mIe-We-5Wx"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UaZ-5i-r3L">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UaZ-5i-r3L">
                                         <rect key="frame" x="137" y="0.0" width="3" height="40"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -59,7 +60,7 @@
                                             <constraint firstAttribute="height" constant="40" id="gc0-uE-jmf"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TQr-Mp-57h">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TQr-Mp-57h">
                                         <rect key="frame" x="137" y="100" width="3" height="40"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -67,7 +68,7 @@
                                             <constraint firstAttribute="width" constant="3" id="whq-Qc-67r"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wQS-FA-xNC">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wQS-FA-xNC">
                                         <rect key="frame" x="0.0" y="100" width="3" height="40"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -75,7 +76,7 @@
                                             <constraint firstAttribute="height" constant="40" id="cEc-5o-QvJ"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iaj-3d-IlM">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iaj-3d-IlM">
                                         <rect key="frame" x="0.0" y="137" width="40" height="3"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -83,7 +84,7 @@
                                             <constraint firstAttribute="width" constant="40" id="wEe-dz-bRo"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="09Y-im-sDW">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="09Y-im-sDW">
                                         <rect key="frame" x="100" y="137" width="40" height="3"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -91,7 +92,7 @@
                                             <constraint firstAttribute="width" constant="40" id="QLI-do-3yG"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IMD-fN-xX3">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IMD-fN-xX3">
                                         <rect key="frame" x="100" y="0.0" width="40" height="3"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -107,56 +108,56 @@
                                             <constraint firstAttribute="width" constant="40" id="EsP-79-OVQ"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dYN-Qu-ZWK">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dYN-Qu-ZWK">
                                         <rect key="frame" x="0.0" y="0.0" width="15" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="I16-wS-4fi"/>
                                             <constraint firstAttribute="width" constant="10" id="af6-gB-ecb"/>
                                         </constraints>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kG1-ET-KYn">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kG1-ET-KYn">
                                         <rect key="frame" x="0.0" y="0.0" width="40" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="6W4-dd-RmO"/>
                                             <constraint firstAttribute="height" constant="10" id="fgi-kT-AWR"/>
                                         </constraints>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xJW-VU-AHB">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xJW-VU-AHB">
                                         <rect key="frame" x="125" y="0.0" width="15" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="Gz1-YR-cfF"/>
                                             <constraint firstAttribute="width" constant="10" id="Yd0-7Z-4kv"/>
                                         </constraints>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J5W-hT-v06">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J5W-hT-v06">
                                         <rect key="frame" x="100" y="0.0" width="40" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="10" id="Crp-zS-aDa"/>
                                             <constraint firstAttribute="width" constant="40" id="hNe-9g-yzT"/>
                                         </constraints>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3pN-Pn-Pwh">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3pN-Pn-Pwh">
                                         <rect key="frame" x="0.0" y="100" width="15" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="10" id="P36-wr-Hv2"/>
                                             <constraint firstAttribute="height" constant="40" id="vx0-3W-ugX"/>
                                         </constraints>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xci-6j-XcK">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xci-6j-XcK">
                                         <rect key="frame" x="0.0" y="125" width="40" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="10" id="26Z-3Y-9RL"/>
                                             <constraint firstAttribute="width" constant="40" id="ngW-ep-z8E"/>
                                         </constraints>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aC4-9i-Np5">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aC4-9i-Np5">
                                         <rect key="frame" x="125" y="100" width="15" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="IhO-Sn-GmF"/>
                                             <constraint firstAttribute="width" constant="10" id="irl-Io-mhY"/>
                                         </constraints>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L8O-XS-h8f">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L8O-XS-h8f">
                                         <rect key="frame" x="100" y="125" width="40" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="E4V-Yq-t67"/>
@@ -209,7 +210,7 @@
                         <constraint firstAttribute="trailing" secondItem="NmT-nx-4Cs" secondAttribute="trailing" id="qzM-t1-B6E"/>
                     </constraints>
                 </view>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uWv-Lz-wpY">
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uWv-Lz-wpY">
                     <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="4Ye-vg-HVD"/>
@@ -233,11 +234,19 @@
                             </connections>
                         </barButtonItem>
                     </items>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="barTintColor" red="0.17254901959999999" green="0.77647058820000003" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </toolbar>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.12415105849504471" green="0.12993165850639343" blue="0.14508575201034546" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="uWv-Lz-wpY" secondAttribute="trailing" id="Diq-zm-1tl"/>
+                <constraint firstAttribute="bottom" secondItem="uWv-Lz-wpY" secondAttribute="bottom" id="LOF-QM-Mbt"/>
+                <constraint firstItem="uWv-Lz-wpY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dJv-Vd-Zzc"/>
                 <constraint firstItem="uWv-Lz-wpY" firstAttribute="top" secondItem="eLk-xI-0g9" secondAttribute="bottom" id="fwK-DE-X2w"/>
+                <constraint firstItem="eLk-xI-0g9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="qOg-iT-7DD"/>
+                <constraint firstAttribute="trailing" secondItem="eLk-xI-0g9" secondAttribute="trailing" id="rix-zG-npf"/>
+                <constraint firstItem="eLk-xI-0g9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="s6r-Is-a43"/>
             </constraints>
             <point key="canvasLocation" x="26.5" y="52.5"/>
         </view>
